--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www",
+    "debug": "nodemon --inspect ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
+    "convert-csv-to-json": "0.0.13",
+    "csv": "^4.0.0",
+    "csv-parse": "^3.2.0",
+    "csvdata": "^1.7.0",
+    "csvtojson": "^2.0.8",
+    "encoding": "^0.1.12",
     "excel4node": "^1.7.0",
     "express": "^4.16.4",
     "multer": "^1.4.1",
     "path": "^0.12.7",
+    "tsv": "^0.2.0",
+    "unescape-unicode": "^0.2.0",
     "xlsx": "^0.14.0"
   }
 }
