--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "csv-parse": "^3.2.0",
     "csvdata": "^1.7.0",
     "csvtojson": "^2.0.8",
+    "docx": "^4.4.0",
+    "docxtemplater": "^3.9.4",
     "encoding": "^0.1.12",
     "excel4node": "^1.7.0",
     "express": "^4.16.4",
+    "jszip": "^2.6.1",
     "multer": "^1.4.1",
     "path": "^0.12.7",
     "tsv": "^0.2.0",
     "unescape-unicode": "^0.2.0",
-    "xlsx": "^0.14.0"
+    "xlsx": "^0.14.0",
+    "xlsx-chart": "^0.3.0"
   }
 }
