--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "encoding": "^0.1.12",
     "excel4node": "^1.7.0",
     "express": "^4.16.4",
+    "figures": "^2.0.0",
     "jszip": "^2.6.1",
     "multer": "^1.4.1",
     "path": "^0.12.7",
