--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "convert-csv-to-json": "0.0.13",
     "csv": "^4.0.0",
     "csv-parse": "^3.2.0",
+    "csv-parser": "^2.1.0",
     "csvdata": "^1.7.0",
     "csvtojson": "^2.0.8",
     "docx": "^4.4.0",
