--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www",
+    "start": "node ./server",
     "debug": "nodemon --inspect ./bin/www"
   },
   "author": "",
@@ -18,5 +18,8 @@
     "figures": "^2.0.0",
     "multer": "^1.4.1",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "8.9.4"
   }
 }
